Organize project structure and confirm Maven dependency management